Position site wide rating correctly

--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -1,8 +1,18 @@
-.movie-poster {
+.poster-img {
   width: 15em;
-  margin-bottom: -7em;
+  margin-bottom: -13em;
+  border: 3px solid black;
 }
 
+.global-rating {
+  color: black;
+  background: white;
+  font-size: 1.5em;
+  position: relative;
+  bottom: 8.5em;
+  right: 1em;
+  /* border: 1px solid red; */
+}
 
 /* .movie-poster {
   display: grid;
