--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -7,10 +7,11 @@
 .global-rating {
   color: black;
   background: white;
+  border: 2px solid black;
   font-size: 1.5em;
   position: relative;
-  bottom: 8.5em;
-  left: .4em;
+  bottom: 9em;
+  left: .1em;
   width: 25px;
   padding: .5em;
   /* border: 1px solid red; */
