Fix poster and rating positioning

--- a/src/MovieCard.css
+++ b/src/MovieCard.css
@@ -10,8 +10,7 @@
   border: 2px solid black;
   font-size: 1.5em;
   position: relative;
-  bottom: 8.5em;
-  left: .1em;
+  top: 4.7em;
   width: 25px;
   padding: .5em;
 }
