--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,9 @@ main {
 
 #movie-display {
   display: grid;
-  grid-template-columns: 100px 100px 100px 100px 100px;
-  grid-gap: 11em;
+  grid-template-columns: 10em 10em 10em 10em 10em;
+  grid-gap: 8em;
   justify-content: center;
   margin-top: -9em;
-  margin-left: -8.5em;
+  margin-left: -5.5em;
 }
