Change grid measurement from px to em

--- a/src/App.css
+++ b/src/App.css
@@ -37,17 +37,13 @@
   }
 }
 
-.main-title {
-
-}
-
 main {
   margin-bottom: 20em;
 }
 
 #movie-display {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px,1fr));
+  grid-template-columns: repeat(auto-fill, minmax(10em,1fr));
   grid-gap: 5em;
   justify-content: center;
   margin-top: -9em;
