Add Popout MovieModal Styling on card click.

--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -16,3 +16,13 @@
   padding: .5em;
   padding-bottom: .8em;
 }
+
+.overlay {
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
