--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -11,7 +11,7 @@
   font-size: 1.5em;
   position: relative;
   top: 4.6em;
-  width: .7em;
+  width: max-content;
   height: .8em;
   padding: .5em;
   padding-bottom: .8em;
