Format hover state for movie card

--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,23 +1,37 @@
 .poster-img {
   width: 15em;
-  margin-bottom: -13em;
-  border: 3px solid black;
+  margin-bottom: -16em;
+  padding-bottom: -40em;
+  /* border: 3px solid black; */
+  filter: grayscale(100%);
+}
+
+.poster-img:hover {
+  width: 15em;
+  margin-bottom: -16em;
+  padding-bottom: -40em;
+
+  filter: none;
+  transition: 0.5s;
 }
 
 .global-rating {
+  font-family: 'Arvo';
   color: black;
-  background: white;
-  border: 2px solid black;
-  font-size: 1.5em;
+  background: rgba(255, 255, 255, 0.8);
+  border-top: 2px solid black;
+  border-bottom: 2px solid black;
+  font-size: 5em;
   position: relative;
-  top: 4.6em;
-  width: max-content;
+  top: 5.6em;
+  width: 2.2em;
   height: .8em;
-  padding: .5em;
-  padding-bottom: .8em;
+  padding: .4em;
+  padding-bottom: 1em;
+  transition: 0.5s;
 }
 
-.overlay {
+/* .overlay {
   position: fixed;
   z-index: 2;
   top: 0;
@@ -25,4 +39,4 @@
   width: 100vw;
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.5);
-}
+} */
