Fix styling goofs from merge

--- a/src/MovieCard/MovieCard.css
+++ b/src/MovieCard/MovieCard.css
@@ -1,9 +1,11 @@
 .poster-img {
+  /* margin-top: -10em; */
+  /* position: relative; */
   width: 15em;
   filter: grayscale(100%);
 }
 
-.poster-img:hover, .globalRating:hover {
+.poster-img:hover {
   width: 15em;
   filter: none;
   transition: 0.5s;
@@ -16,9 +18,9 @@
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   font-size: 2em;
-  position: relative;
-  margin-top: -1.47em;
+  position: absolute;
   width: 3.5em;
+  margin-top: 9.9em;
 }
 
 /* .overlay {
