--- a/src/MovieModal/MovieModal.css
+++ b/src/MovieModal/MovieModal.css
@@ -1,4 +1,3 @@
-
 .modal {
   position: fixed;
   top: 1em;
@@ -11,6 +10,7 @@
   height: 90%;
   border-radius: 1.5em;
   box-shadow: black 3px 3px 3px;
+  overflow: scroll;
 }
 
 .text-display {
