--- a/src/App/App.css
+++ b/src/App/App.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+  overflow: auto;
+}
+
 .App {
   text-align: center;
 }
@@ -11,4 +16,5 @@
   background-color: rgba(75, 75, 75, .6);
   justify-content: center;
   display: flex;
+  overflow-y: scroll;
 }
