--- a/src/MovieModal/MovieModal.css
+++ b/src/MovieModal/MovieModal.css
@@ -11,7 +11,7 @@
   height: 90%;
   border-radius: 1.5em;
   box-shadow: black 3px 3px 3px;
-  overflow-y: visible;
+  overflow-y: auto;
 }
 
 .text-display {
