Add comment styling and fix linter errors.

--- a/src/MovieModal/MovieModal.css
+++ b/src/MovieModal/MovieModal.css
@@ -32,10 +32,10 @@
 }
 
 .exit {
-  position: absolute;
-  top: .5em;
-  right: .5em;
-  height: 1.5em;
+  position: fixed;
+  top: 2em;
+  right: 8em;
+  height: 2em;
   width: auto;
 }
 
