--- a/src/MovieVideos/MovieVideos.css
+++ b/src/MovieVideos/MovieVideos.css
@@ -3,6 +3,14 @@
   width: 95%;
   grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
   grid-column-gap: 1em;
+  box-shadow: #5d404070 3px 3px 3px;
+  border-radius: 1em;
+  transition: all 1.2s;
+  background-color: rgba(220, 220, 220, 0.8);
+  text-align: left;
+  padding: .5em;
+  margin: auto;
+  margin-top: 1em;
 }
 
 .video {
