--- a/src/UserInfo/UserInfo.css
+++ b/src/UserInfo/UserInfo.css
@@ -6,7 +6,7 @@
   padding-bottom: 2.7em;
   margin-top: .5em;
   width: 7em;
-  height: 2.3em;
+  height: 1.3em;
   font-size: 2em;
   font-family: 'Arvo'
 }
@@ -33,4 +33,9 @@
 
 .loginform {
   visibility: hidden;
+}
+
+.secondary-font {
+  font-family: 'Arvo';
+  font-size: 1em;
 }
